# fjcpc-course-parser

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  README.md  package.json  pnpm-lock.yaml  run.ps1  test.ps1
backend/src/: docs.rs  lib.rs  main.rs
backend/src/controller/: course.rs  mod.rs  schedule.rs
backend/src/db/: connection.rs  mod.rs  models.rs
backend/src/parser/: auth.rs  course.rs  mod.rs  schedule.rs
backend/src/routes/: course.rs  schedule.rs
backend/src/services/: course.rs  mod.rs  stats.rs
backend/src/utils/: cache.rs  config.rs  crypto.rs  http.rs  log.rs  mod.rs  response.rs  schedule.rs  simulator.rs
backend/tests/: auth_test.rs  course_test.rs  ipv4_test.rs  schedule_test.rs
backend/utils/: api.js  schedule.js
docs/: MIGRATION_COMPLETE.md  RUST_MIGRATION_FINAL_REPORT.md  actix-rewrite-plan.md  rust-migration-summary.md
frontend/: .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: CourseTable.vue  TutorialModal.vue
node_backend/services/: authService.js
services/: courseService.js  scheduleService.js
utils/: config.js  log.js  response.js  schema.js
