[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-std = "1.13.2"
base64 = "0.22.1"
dotenvy = "0.15.7"
futures = "0.3.31"
headless_chrome = "1.0.18"
hickory-resolver = "0.24.2"
once_cell = "1.20.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
